syntax = "proto3";

package v1;

import "../../../../google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// Article management system

message Article {
    int64 id = 1;
    string title = 2;
    int64 author = 3;
    int64 category =4;
    google.protobuf.Timestamp last_updated = 5;
}

message ArtRequest {
    string api = 1;
    int64 id = 2;
}

message ArtRespones {
    string api = 1;
    Article article = 2;
}

service ArticleManagementService {
   rpc getArticleInfor(ArtRequest) returns (ArtRespones){
    option (google.api.http) = {
        post: "/v1/ArticleInfor/{id}"
    };
   }
}
